# libpdb

./: Cargo.toml  README.md
src/: error.rs  item.rs  lib.rs  read.rs  save.rs  validator.rs
src/structs/: atom.rs  mod.rs  pdb.rs  residue.rs
