[package]
name = "libpdb"
version = "0.1.0"
authors = ["shima <shima.kazuhide0705@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = {version = "1.5.1", optional = true}
anyhow = "1.0"
thiserror = "1.0"
getset = "0.1.1"